--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
 }
+header h1 {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
 
 /* Rest of your existing CSS styles for the elements within the body */
 
