--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@ body {
 /* Add styles for your sections, footer, etc. */
 
 
-header {
+/*header {
     background-color: #f5f5f5;
     padding: 20px;
     background-image: "family.jpg";
-}
+}*/
 header h1 {
   font-size: 70px;
   font-weight: 600;
